# Controller/ReportController.js
@@ -15,6 +15,8 @@ router.get('/all', (req, res) => {
 
 router.post('/', (req, res) => {
     const reportData = req.body;
+    const filePath = req.file.path;
+    reportData.file = filePath;
     reportModel.createReport(reportData, (err, result) => {
       if (err) {
         res.status(500).json({ 'status': 'error', 'message': 'Internal Server Error' });
